--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ body {
     font-family: Arial, sans-serif;
     background-color: #333;
     color: #f4f4f4;
+    background-image: url("body.png");
+    background-size: 128%;
+    background-repeat: no-repeat;
 }
 
 a {
