--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ ul {
 }
 
 #mainWindow {
-    min-width: 650px;
+    min-width: 400px;
+    max-width: 1000px;
     width: fit-content;
     margin: auto;
     padding: 15px 20px 5px 20px;
